<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_input_label">Email:</string>
    <string name="password_input_label">Password:</string>
    <string name="et_email_placeholder">Input email…</string>
    <string name="et_password_placeholder">Input password…</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="shoe_store_title">The Shoe Store</string>

    <string name="welcome_title">The Shoe Store.</string>
    <string name="welcome_exposition">Welcome, here you can browse, add and update shoes in our store.\nNavigate onward to the next screen with the button below.</string>
    <string name="welcome_continue">Continue…</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_info">Scroll through the list to view shoes.\n\nTo Update a shoe entry use the floating button on the right hand side.\n\nTo Add new shoes, use the lower add button on the following screen.</string>
    <string name="instructions_goto_store">Go To Store</string>

    <string name="shoe_see_details">Details</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="shoe_name_title">Name:</string>
    <string name="shoe_company_title">Company:</string>
    <string name="shoe_size_title">Size:</string>
    <string name="shoe_description_title">Description:</string>

    <string name="menu_logout">Logout</string>

</resources>
