<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.store.StoreViewModel" />
    </data>

    <!--Constraint layout used to center content/ add padding where required-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintTop_toTopOf="parent">

            <!--I am using a constrain layouts here instead of a linear layout so I can have the
             description input box take up the full length of the screen, whereas the other fields are in-line
             with their labels. Although also possible using a linear layout, a constraint layout in this case is simpler.-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_title"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:labelFor="@id/name_edit"
                    android:text="@string/shoe_name_title"
                    app:layout_constraintEnd_toStartOf="@+id/name_edit"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/company_title"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:labelFor="@id/company_edit"
                    android:text="@string/shoe_company_title"
                    app:layout_constraintEnd_toStartOf="@+id/company_edit"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_title" />

                <TextView
                    android:id="@+id/size_title"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:labelFor="@id/size_edit"
                    android:text="@string/shoe_size_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_title" />

                <TextView
                    android:id="@+id/description_title"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:labelFor="@id/description_edit"
                    android:text="@string/shoe_description_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/size_title" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={viewModel.selectedShoe.name}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Air Jordan 1" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={viewModel.selectedShoe.company}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/company_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Nike" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/size_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text='@={""+viewModel.selectedShoe.size}'
                    app:layout_constraintBaseline_toBaselineOf="@+id/size_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    tools:text="10.5" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:height="200dp"
                    android:ems="10"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:text="@={viewModel.selectedShoe.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_title"
                    tools:text="Theses shoes can be worn on your feet." />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/return_button"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> viewModel.onReturn()}"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> viewModel.onSave()}"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toEndOf="@+id/return_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>